# cxx-cmake-library

./: .gitignore  CMakeLists.txt  README.md  README.template.md
cmake/install/: FindProject.cmake
cmake/settings/: cpp.cmake  dependencies.cmake  project.cmake
src/: main  version.hpp.in
